# ICTV

./: .gitignore  README  README.md  premake4.lua
data/: qp.txt  vp.txt
data/expe_files/: EgDragon_zoom.txt  octa130_zoom_viewpoint.txt  octa_viewpoint.txt
data/raw/: bunny65.raw  bunny_border_67.raw  cube_128.raw  cube_border_32.raw  octa-flower-128.raw  octa-flower-130_border.raw  sphere_border_73.raw
latex/: README.md  article.tex  fig_results.tex  ictv.bib  macros.tex
latex/CGI_Transvoxels/: bibtex.bib  conclusion.tex  introduction.tex  introduction_GPUImplTransvo.tex  ourmethod.tex  preliminaries.tex  results.tex  template_CGIconf.tex
prez/: Gruntfile.js  bower.json  index.html  index.html~  package.json
prez/css/: reveal.css  reveal.scss
prez/img/: formula.svg.bu  tgl.png.bu
prez/js/: reveal.js
src/cpp/: BlitFramebuffer.cpp  BlitFramebuffer.h  Curvature.cpp  Curvature.h  DataLoader.cpp  DataLoader.h  Definitions.h  Format.h  GpuOctree.cpp  GpuOctree.h  Hierarchy.cpp  Hierarchy.h  Parameters.cpp  Parameters.h  PrimitiveDraw.cpp  PrimitiveDraw.h  QuaternionCamera.cpp  QuaternionCamera.h  RegularTriangulation.cpp  Shading.cpp  Shading.h  TransitionTriangulation.cpp  Triangulation.cpp  Triangulation.h  TriangulationTables.h  Utils.cpp  Utils.h  main.cpp
src/gkit/: Doxyfile  batch_perf.cpp  compute_kit.cpp  compute_tutorial1.cpp  compute_tutorial2.cpp  compute_tutorial3.cpp  filter.glsl  filter_compute_tutorial1.cpp  filter_gaussian.glsl  filter_tutorial1.cpp  image_viewer.cpp  materials.mtl  mesh_viewer.cpp  mini_fragment.glsl  mini_gl3core.cpp  mini_vertex.glsl  premake4.lua  shader_kit.cpp  tessellation.glsl  tessellation_quad.glsl  tessellation_sphere.cpp  tessellation_sphere.glsl  tessellation_tuto.cpp  tp1.cpp  tp1shader.cpp  tp1sphere.glsl  tp1sphere_reyes.cpp  tutorial1.cpp  tutorial2.cpp  (+1 more)
tests/: hierarchy.c
tools/comparison/: CMakeLists.txt  GPU.txt  Makefile  README.md  back_Makefile  comparison.cpp  generateShape.sh  helpers.h  joinFiles.cpp  launchComparison.sh  main.cpp  visuPoints.cpp
tools/comparison/cmake/: CheckICTVToolsOptionalDependencies.cmake
(+256 files in other folders)
